--- a/static/styles/nav.css
+++ b/static/styles/nav.css
@@ -29,7 +29,7 @@ nav > ul > li:hover > img, nav > ul > li.active > img {
 nav > ul > li {
     position: relative;
     border-radius: 12px;
-    padding: 0.4rem .8rem .2rem .8rem;
+    padding: 0.4rem .8rem;
     cursor: pointer;
     height: fit-content;
 }
@@ -67,8 +67,9 @@ nav > ul > li:hover, nav > ul > li.active {
         gap: 1.2rem;
     }
     nav > ul > li {
-        padding: .6rem;
         display: flex;
+        gap: 1rem;
+        margin-right: 1rem;
         border-radius: 12px;
         width: 100%;
         cursor: pointer;
@@ -78,10 +79,12 @@ nav > ul > li:hover, nav > ul > li.active {
     }
     nav > ul > li > img {
         vertical-align: middle;
+        object-fit: contain;
+        aspect-ratio: 1 !important;
     }
     nav > ul > li > p {
-        line-height: 1rem;
-        margin: 0 1rem;
+        margin: .5rem 0;
+        transform: translateY(4px);
         vertical-align: middle;
         display: inline-block;
         opacity: 0;
