--- a/static/styles/selector.css
+++ b/static/styles/selector.css
@@ -10,7 +10,7 @@
   background: white;
   border-radius: 15px;
   color: black;
-  padding: .25rem 1rem;
+  padding: .6rem 1rem;
   filter: drop-shadow(0 0 0.4rem rgba(72, 72, 72, 0.6));
 }
 
@@ -18,7 +18,6 @@
   font-family: BlockCraft, Arial;
   font-size: 1.5rem;
   margin: 0;
-  translate: 0 -20%;
 }
 
 .pixel-selector {
